[package]

name = "gj"
version = "0.0.5"
authors = [ "David Renshaw <david@sandstorm.io>" ]
license = "MIT"
description = "Event loop and promises."
repository = "https://github.com/dwrensha/gj"

readme = "README.md"

keywords = ["promise", "async", "io"]

[dependencies]
mio = {git = "https://github.com/carllerche/mio"}
nix = "0.3.9"
